# mcp

./: .envrc  .gitignore  Cargo.toml  LICENSE  flake.nix  readme.md  rust-toolchain.toml  test-server.sh
.cursor/rules/: code-policy.mdc  nix-flakes.mdc  project-memory.mdc  ruler.mdc  rust.mdc
benches/: system_analyzer.rs
docs/: domainContext.md  progress.md  projectBrief.md  projectContext.md  systemPatterns.md  techContext.md
docs/api/: nix-inspector-mcp.md
docs/notes/: 2024-02-nix-inspector-implementation.md  2024-03-28-nix-configuration-standard.md  2024-03-28-rust-toolchain-pattern.md
docs/notes/decisions/: 2024-02-nix-inspector-mcp.md  2024-03-28-git-branching-strategy.md  2024-03-28-mcp-initialization-pattern.md  2024-03-28-nix-development-environment.md  2024-03-28-project-alignment.md  2024-03-28-transport-and-inspector-implementation.md
examples/: basic_server.rs
host/cursor/rules/: mcp.mdc  nixmcp.mdc  nixos.mdc  project-memory.mdc  rust.mdc
modules/: buildPackage.nix  configuration.nix
modules/lists/: buildInputs.nix  packages.nix
modules/sets/: env.nix
modules/shells/: default.nix
server/: arxivmcp.nix  nix-inspector-mcp.nix  nixmcp.nix
src/: lib.rs  main.rs
src/inspector/: environment.rs  flake.rs  mod.rs  system.rs  validation.rs
src/transport/: mod.rs  stdio.rs
tests/: integration_test.rs
